Commit from TeleportHQ

--- a/index.html
+++ b/index.html
@@ -59,12 +59,20 @@
               rel="noreferrer noopener"
               class="home-link"
             >
-              abaout
+              home
             </a>
-            <span class="home-text">Features</span>
-            <span class="home-text1">Pricing</span>
-            <span class="home-text2">Team</span>
-            <span class="home-text3">Blog</span>
+            <span class="home-text">news</span>
+            <span class="home-text01">working-on</span>
+            <span class="home-text02">social-media</span>
+            <span class="home-text03">
+              <span>game-changelog</span>
+              <br />
+            </span>
+            <span class="home-text06">
+              <span>introduction</span>
+              <br />
+            </span>
+            <span class="home-text09">Team</span>
           </nav>
         </div>
       </div>
