Commit from TeleportHQ

--- a/index.html
+++ b/index.html
@@ -45,35 +45,39 @@
       <link href="./home.css" rel="stylesheet" />
 
       <div class="home-container">
-        <img alt="image" src="public/movie_sm-1-1100h.jpg" class="home-image" />
-        <div class="home-right-sidebar">
-          <nav class="home-nav">
-            <img
-              alt="image"
-              src="public/c12567dedc56b18acd5c42c784627580-327x1024-200w.png"
-              class="home-image1"
-            />
-            <a
-              href="https://google.com"
-              target="_blank"
-              rel="noreferrer noopener"
-              class="home-link"
-            >
-              home
-            </a>
-            <span class="home-text">news</span>
-            <span class="home-text01">working-on</span>
-            <span class="home-text02">social-media</span>
-            <span class="home-text03">
-              <span>game-changelog</span>
-              <br />
-            </span>
-            <span class="home-text06">
-              <span>introduction</span>
-              <br />
-            </span>
-            <span class="home-text09">Team</span>
-          </nav>
+        <div class="home-container1">
+          <div class="home-top">
+            <div class="home-first">
+              <nav class="home-nav">
+                <img
+                  alt="image"
+                  src="public/external/c12567dedc56b18acd5c42c784627580-327x1024-200w-200w.png"
+                  class="home-image"
+                />
+                <a
+                  href="https://google.com"
+                  target="_blank"
+                  rel="noreferrer noopener"
+                  class="home-link"
+                >
+                  home
+                </a>
+                <span class="home-text">news</span>
+                <span class="home-text01">working-on</span>
+                <span class="home-text02">social-media</span>
+                <span class="home-text03">
+                  <span>game-changelog</span>
+                  <br />
+                </span>
+                <span class="home-text06">
+                  <span>introduction</span>
+                  <br />
+                </span>
+                <span class="home-text09">Team</span>
+              </nav>
+            </div>
+          </div>
+          <div class="home-container2"></div>
         </div>
       </div>
     </div>
