Commit from TeleportHQ

--- a/index.html
+++ b/index.html
@@ -47,12 +47,19 @@
       <div class="home-container">
         <div class="home-container1">
           <div class="home-top">
+            <div class="home-container2">
+              <img
+                src="public/movie_sm-1-1700h.jpg"
+                alt="image"
+                class="home-image"
+              />
+            </div>
             <div class="home-first">
               <nav class="home-nav">
                 <img
                   alt="image"
                   src="public/external/c12567dedc56b18acd5c42c784627580-327x1024-200w-200w.png"
-                  class="home-image"
+                  class="home-image1"
                 />
                 <a
                   href="https://google.com"
@@ -77,7 +84,7 @@
               </nav>
             </div>
           </div>
-          <div class="home-container2"></div>
+          <div class="home-container3"></div>
         </div>
       </div>
     </div>
