Commit from TeleportHQ

--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
       <link href="./home.css" rel="stylesheet" />
 
       <div class="home-container">
-        <div class="home-container1">
+        <div class="home-container01">
           <div class="home-top">
-            <div class="home-container2">
+            <div class="home-container02">
               <img
-                src="public/movie_sm-1-1700h.jpg"
+                src="public/movie_sm-1-1200h.jpg"
                 alt="image"
                 class="home-image"
               />
@@ -59,7 +59,7 @@
                 <img
                   alt="image"
                   src="public/external/c12567dedc56b18acd5c42c784627580-327x1024-200w-200w.png"
-                  class="home-image1"
+                  class="home-image01"
                 />
                 <a
                   href="https://google.com"
@@ -71,20 +71,89 @@
                 </a>
                 <span class="home-text">news</span>
                 <span class="home-text01">working-on</span>
-                <span class="home-text02">social-media</span>
-                <span class="home-text03">
+                <a href="#works" class="home-link1">
+                  <span>works</span>
+                  <br />
+                </a>
+                <span class="home-text04">social-media</span>
+                <span class="home-text05">
                   <span>game-changelog</span>
                   <br />
                 </span>
-                <span class="home-text06">
+                <span class="home-text08">
                   <span>introduction</span>
                   <br />
                 </span>
-                <span class="home-text09">Team</span>
+                <span class="home-text11">Team</span>
               </nav>
             </div>
           </div>
-          <div class="home-container3"></div>
+          <div id="works" class="home-works">
+            <span class="home-text12">works</span>
+            <div class="home-container03"></div>
+            <div class="home-container04">
+              <div class="home-container05">
+                <img
+                  src="public/2010_manga_template-200w.png"
+                  alt="image"
+                  class="home-image02"
+                />
+                <img
+                  src="public/2010_manga_template-200w.png"
+                  alt="image"
+                  class="home-image03"
+                />
+              </div>
+              <div class="home-container06">
+                <img
+                  src="public/2010_manga_template-200w.png"
+                  alt="image"
+                  class="home-image04"
+                />
+                <img
+                  src="public/2010_manga_template-200w.png"
+                  alt="image"
+                  class="home-image05"
+                />
+              </div>
+              <div class="home-container07">
+                <img
+                  src="public/2010_manga_template-200w.png"
+                  alt="image"
+                  class="home-image06"
+                />
+                <img
+                  src="public/2010_manga_template-200w.png"
+                  alt="image"
+                  class="home-image07"
+                />
+              </div>
+              <div class="home-container08">
+                <img
+                  src="public/2010_manga_template-200w.png"
+                  alt="image"
+                  class="home-image08"
+                />
+                <img
+                  src="public/2010_manga_template-200w.png"
+                  alt="image"
+                  class="home-image09"
+                />
+              </div>
+              <div class="home-container09">
+                <img
+                  src="public/2010_manga_template-200w.png"
+                  alt="image"
+                  class="home-image10"
+                />
+                <img
+                  src="public/2010_manga_template-200w.png"
+                  alt="image"
+                  class="home-image11"
+                />
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
